--- a/src/components/Contect_us/Contect_us.css
+++ b/src/components/Contect_us/Contect_us.css
@@ -1,15 +1,56 @@
-@media only screen and (max-width: 540px) {
-    .forms{
-        border: none !important;
-        margin-top: 15px;
-        background-color: #ffffff !important;
-    }
-  }
 
-  .contect-bgColors{
-    background-color: var(--second-secondary);
-  }
-  .sugg_contects4{
-    margin-top: 250px !important;
-    margin-bottom: 20px !important;
+ 
+  @media (max-width: 480px){
+    .contact_form_users_lawyer{
+      margin-top: 0px !important;
+    }
+    .contact_form_users_lawyer h2 {
+      text-align: center;
+    }
+    .contact_form_users_lawyer p {
+      width: 90% !important;
+      margin: auto !important;
+      font-size: 1.1rem !important;
+    }
+    .contact_form_users_lawyer .all_social{
+      text-align: center !important;
+    }
+    .forms{
+      border: none !important;
+      margin-top: 15px;
+    }
+    .contact_us_section_second h2{
+      text-align: center;
+    }
+    .contact_us_section_second p{
+      width: 90% !important;
+      margin: auto !important;
+      font-size: 1.1rem !important;
+    }
+    .contact_us_section_second .contact_email{
+      display: flex;
+      gap: 20%; 
+    }
+    .contact_us_section_second .contact_email p{
+   font-size: 1rem !important;
+   margin-top: 25px !important;
+   text-align: center;
+    }
+    .contact_us_section_second iframe{
+      height: 25vh !important;
+      margin-top: 30px;
+      margin-left: -2% !important;
+    }
+    .contact_us_section_second .sugg_contects4{
+      margin-top: 25px !important;
+      margin-bottom: 20px !important;
+    }
+    .contact_us_section_second .contact_add p {
+       margin-left:-10% !important;
+      font-size: 0.9rem !important;
+    }
+    .contact_us_section_second .contact_add .headquarter{
+      margin-top: 25px !important;
+    }
+   
   }
