--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -164,6 +164,9 @@ h1{
   .main {
     height: 500px !important;
   }
+  .t2{
+    font-size: 36px !important;
+  }
   .lawfind1{
     margin-top: 130px !important;
   }
