--- a/src/components/All_Lawyers/AllLawyer.css
+++ b/src/components/All_Lawyers/AllLawyer.css
@@ -129,6 +129,9 @@ input[type="text"]{
     .pop{
         margin-top: 8px;
     }
+    .savelist {
+        margin-left: -3px;
+    }
 }
 
 @media only screen and (min-width: 481px) and (max-width: 767px){
@@ -189,7 +192,7 @@ input[type="text"]{
     }
     .profi {
         width: 85% !important;
-        margin-top: 110px;
+        margin-top: 100px !important;
     }
     .alllawyersection{
         height: 160px;
@@ -201,8 +204,10 @@ input[type="text"]{
     .lawpicd {
         height: 60px;
         width: 60px;
+    }   
+    .res4 {
+        margin-right: -10px !important;
     }
-    
 }
 @media screen and (min-width: 1025px) and (max-width: 1200px){
 
