--- a/src/components/common/Footer.css
+++ b/src/components/common/Footer.css
@@ -109,7 +109,8 @@ font-size: 93.2% !important;
     margin-top: 79px !important;
 }
 .asa{
-  display: none;
+  margin-top: 20%;
+  margin-bottom: -10%;
 }
 }
 
