--- a/src/components/All_Lawyers/AllLawyer.css
+++ b/src/components/All_Lawyers/AllLawyer.css
@@ -132,6 +132,12 @@ input[type="text"]{
     .savelist {
         margin-left: -3px;
     }
+    .all_lawyer_ad_section .featured h1{
+        margin-top: -65px !important ;
+    }
+    .all_lawyer_ad_section .featured p{
+        margin-top: -75px !important ;
+    }
 }
 
 @media only screen and (min-width: 481px) and (max-width: 767px){
@@ -178,6 +184,12 @@ input[type="text"]{
     .pop{
         margin-top: 8px;
     }
+    .all_lawyer_ad_section .featured h1{
+        margin-top: -65px !important ;
+    }
+    .all_lawyer_ad_section .featured p{
+        margin-top: -75px !important ;
+    }
 }
 
 
@@ -207,6 +219,12 @@ input[type="text"]{
     }   
     .res4 {
         margin-right: -10px !important;
+    }
+    .all_lawyer_ad_section .featured h1{
+        margin-top: -65px !important ;
+    }
+    .all_lawyer_ad_section .featured p{
+        margin-top: -75px !important ;
     }
 }
 @media screen and (min-width: 1025px) and (max-width: 1200px){
