--- a/src/components/job_description_page/Lawyers_profile_card/All_lawyer_card/All_lawyers_card.css
+++ b/src/components/job_description_page/Lawyers_profile_card/All_lawyer_card/All_lawyers_card.css
@@ -41,9 +41,10 @@
         padding-right: 1% !important;
     }
     .expertise_service .connect_now{
-        width: 90% !important;
+        width: 110% !important;
         height: 4vh !important;
         padding: 2% !important;
+        font-size: 80% !important;
     }
     .review_section_submit button{ 
         width: 60% !important ;
