--- a/src/components/job_description_page/Lawyers_profile_card/Lawyers_profile_card.css
+++ b/src/components/job_description_page/Lawyers_profile_card/Lawyers_profile_card.css
@@ -58,8 +58,9 @@
         width: 150% !important;
         margin-left: -20px;
     }
-    .advocate_main_profile span .save_bkm{
-    margin-top: -80% !important;
+
+    .advocate_page_section{
+       text-align: center !important;
     }
 }
 
@@ -67,6 +68,9 @@
     .lawyer_upload_images_second{
         width:100%;
     }
+    .advocate_page_section{
+        text-align: center !important;
+     }
   
 
 }
@@ -77,4 +81,7 @@
     .lawyer_location_map iframe{
         height: 35vh;
     }
+    .advocate_page_section{
+        text-align: center !important;
+     }
 }
