--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -147,6 +147,9 @@ option:focus {
   margin-bottom: 25px !important;
   font-size: 0.8rem;
  }
+ .sgn_form .do_have_ac{
+  justify-content: start !important;
+ }
 }
 @media only screen and (min-width: 481px) and (max-width: 767px){
   .btn-law{
@@ -191,12 +194,14 @@ option:focus {
   font-size: 1rem;
  }
 
+
 }
 @media only screen and (min-width: 768px) and (max-width: 1023px){
   .btn-law{
     margin-top: 14% !important;
     width: 20% !important;
    }
+  
   
  .form-sectionss .inpu{
    width: 85% !important;
