--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -65,12 +65,16 @@ h1{
   }
 
   @media only screen and (min-width:280px) and (max-width:990px){
+    
     .main {
       height: 312px !important;
     }
   }
 
   @media (max-width: 480px){
+    .main{
+      background-image: url(../images/DIFM_LAW_bgcolor3.jpg) !important;
+    }
     h2{
       font-size: 36px !important;
     }
