--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -8,7 +8,7 @@
   background-image: url("../images/DIFM_LAW_bgcolor.jpg") !important;
   background-size: cover;
   height: 590px;
-  margin-top: -75px;
+  margin-top: -5px;
   
 }
 .main::before {
@@ -17,7 +17,7 @@
   top: 0;
   left: 0;
   width: 48%;
-  height: 516px;
+  height: 585px;
   z-index: 0;
  background: linear-gradient( 90deg , rgba(1,1,3,0.8155637254901961) 0%, rgba(9,9,17,0.7287289915966386) 52%, rgba(0,212,255,0) 100%);
 }
@@ -73,7 +73,11 @@ h1{
 
   @media (max-width: 480px){
     .main{
-      background-image: url(../images/DIFM_LAW_bgcolor3.jpg) !important;
+      height: 550px !important;
+  margin-top: 85px !important;
+  background-position: center !important;
+  background-size: cover !important;
+      background-image: url("../images/DIFM_LAW_bgcolor3.jpg") !important;
     }
     h2{
       font-size: 36px !important;
@@ -94,20 +98,17 @@ h1{
         margin-top: -4px;
       }
       .her0s{
-        margin-bottom: 50px;
-      }
-      .main {
-        height: 312px !important;
+        margin-top: -360px;
       }
       .main::before {
         content: "";
         position: absolute;
         top: 0;
         left: 0;
-        width: 92%;
-        height: 392px;
+        width: 100%;
+        height: 675px;
         z-index: 0;
-       background: linear-gradient( 90deg , rgba(1,1,3,0.8155637254901961) 0%, rgba(9,9,17,0.7287289915966386) 52%, rgba(0,212,255,0) 100%);
+       background: linear-gradient( 170deg , rgba(1,1,3,0.8155637254901961) 0%, rgba(9,9,17,0.7287289915966386) 52%, rgba(0,212,255,0) 80%);
       }
   }
   @media only screen and (min-width: 541px) and (max-width: 587px){
@@ -231,7 +232,7 @@ h1{
     top: 0;
     left: 0;
     width: 48%;
-    height: 426px !important;
+    height: 495px !important;
     z-index: 0;
    background: linear-gradient( 90deg , rgba(1,1,3,0.8155637254901961) 0%, rgba(9,9,17,0.7287289915966386) 52%, rgba(0,212,255,0) 100%);
   }
