login issue solve

--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -29,7 +29,7 @@ option:focus {
 }
 
 .form-sectionss{
-  background-image: url("../images/DIFM_LAW_bgcolor.jpg") !important;
+  background-image: url("../images/forms.jpg") !important;
   background-size: cover;
   height: 960px;
   margin-top: -75px;
